# ale-switcher

./: .gitignore  README.md  pyproject.toml  requirements.txt  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: build.yml
ale_switcher/: __init__.py  __main__.py  config.py  constants.py  log.py  utils.py
ale_switcher/core/: errors.py  load_balancing.py  models.py
ale_switcher/data/: credential_store.py  store.py
ale_switcher/gui/: app.py  bridge.py  notifications.py  tray.py
ale_switcher/gui/static/: index.html
ale_switcher/gui/static/css/: input.css  tailwind.min.css
ale_switcher/gui/static/js/: app.js
ale_switcher/infrastructure/: api.py  factory.py  locking.py  oauth.py
ale_switcher/services/: accounts.py  sessions.py  switching.py
